[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s4w"
version = "1.5.0"
description = "Passive web security assessment toolkit for modern web applications"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary - All Rights Reserved" }
authors = [
  { name = "S4W Project" }
]
keywords = [
  "cybersecurity",
  "appsec",
  "web-security",
  "passive-recon",
  "osint",
  "security-headers",
  "hardening",
  "kali-linux",
  "security-audit"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
  "Topic :: System :: Networking :: Monitoring"
]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "dnspython>=2.6.0",
  "requests>=2.31.0",
  "rich>=13.7.0"
]

[project.urls]
Repository = "https://github.com/silv4code/s4w"
Issues = "https://github.com/silv4code/s4w/issues"

[project.scripts]
s4w = "s4w.cli:main"

[tool.setuptools]
packages = ["s4w"]
