[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s4w"
version = "1.5.0"
description = "Passive web security assessment toolkit for authorized web application reviews"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "S4W Project"}
]
keywords = [
  "cybersecurity",
  "appsec",
  "osint",
  "recon",
  "headers",
  "hardening",
  "kali",
  "web-security"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
  "Topic :: System :: Systems Administration"
]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "dnspython>=2.6.0",
  "requests>=2.31.0",
  "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USERNAME/s4w"
Repository = "https://github.com/YOUR_GITHUB_USERNAME/s4w"
Issues = "https://github.com/YOUR_GITHUB_USERNAME/s4w/issues"

[project.scripts]
s4w = "s4w.cli:main"

[tool.setuptools]
packages = ["s4w"]
